--- a/Ex_Ordinario_DCP/Base.lproj/Main.storyboard
+++ b/Ex_Ordinario_DCP/Base.lproj/Main.storyboard
@@ -166,11 +166,11 @@
             </objects>
             <point key="canvasLocation" x="118" y="1133"/>
         </scene>
-        <!--Tabla-->
+        <!--Tab-->
         <scene sceneID="KCD-JP-h0j">
             <objects>
-                <viewController id="7ie-wt-ZJc" customClass="VCTabla" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="yol-n8-vSk" customClass="VCTabla">
+                <viewController id="7ie-wt-ZJc" customClass="VCTab" customModule="Ex_Ordinario_DCP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yol-n8-vSk" customClass="Vc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -181,10 +181,28 @@
                                     <outlet property="delegate" destination="7ie-wt-ZJc" id="w1V-SM-0d4"/>
                                 </connections>
                             </mapView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jco-sP-Nec">
+                                <rect key="frame" x="0.0" y="13" width="375" height="315"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="aH6-aL-9VD">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aH6-aL-9VD" id="kim-ov-0yg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="bm7-TR-Ng6"/>
                     </view>
+                    <connections>
+                        <outlet property="MiMapa" destination="G2s-re-C8d" id="btg-Jg-7V1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5On-ds-VTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
